// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-slider should render disabled slider with input 1`] = `
<wpp-slider class="wpp-slider" disabled="" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list" value="5" with-input="">
  <mock:shadow-root>
    <div class="slider-container">
      <div class="slider-column">
        <div class="disabled single-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="max-range-idle slider" disabled="" max="100" min="1" part="input-slider-max" step="1" type="range" value="5" style="--active-single-progress-bar: 4.040404040404041%;">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;

exports[`wpp-slider should render range slider with displayed value 1`] = `
<wpp-slider class="wpp-slider" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list" with-value="">
  <mock:shadow-root>
    <div class="size-m with-value without-label" part="control-wrapper">
      <div class="range-value-wrapper" part="value-wrapper">
        <wpp-typography part="value" type="s-midi">
          1
        </wpp-typography>
        <wpp-divider class="divider" part="value-divider"></wpp-divider>
        <wpp-typography part="value" type="s-midi">
          3
        </wpp-typography>
      </div>
    </div>
    <div class="slider-container">
      <div class="slider-column">
        <div class="range-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="min-range-idle slider" max="5" min="1" part="input-slider-min" step="2" type="range" value="1" style="--active-range-from-progress-bar: 0%; --active-range-to-progress-bar: 50%;">
          <input class="max-range-idle slider" max="5" min="1" part="input-slider-max" step="2" type="range" value="3">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;

exports[`wpp-slider should render range slider with label, icon and tooltip description 1`] = `
<wpp-slider class="wpp-slider" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list">
  <mock:shadow-root>
    <wpp-label class="wpp-label" exportparts="wrapper, content, icon" part="label">
      <label class="internal-label-wrapper" part="wrapper">
        <wpp-internal-label class="s-strong wpp-internal-label" exportparts="info-wrapper, text, optional-text, tooltip, icon, icon-wrapper" part="content">
          <mock:shadow-root>
            <div class="info-wrapper with-icon" part="info-wrapper" role="presentation">
              <wpp-typography class="text" part="text" type="s-strong">
                Test label
              </wpp-typography>
              <wpp-typography class="optional" part="optional-text" type="s-body">
                (Optick)
              </wpp-typography>
            </div>
            <wpp-tooltip class="tooltip" part="tooltip" text="Your email will be used to send you a confirmation number">
              <div aria-label="Show info" class="icon" part="icon-wrapper" role="button" tabindex="0">
                <slot name="icon" part="icon"></slot>
              </div>
            </wpp-tooltip>
          </mock:shadow-root>
          <wpp-icon-mail-v3-2-0 part="icon" slot="icon"></wpp-icon-mail-v3-2-0>
        </wpp-internal-label>
      </label>
    </wpp-label>
    <div class="slider-container">
      <div class="slider-column">
        <div class="range-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="min-range-idle slider" max="5" min="1" part="input-slider-min" step="2" type="range" value="1" style="--active-range-from-progress-bar: 0%; --active-range-to-progress-bar: 50%;">
          <input class="max-range-idle slider" max="5" min="1" part="input-slider-max" step="2" type="range" value="3">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;

exports[`wpp-slider should render range slider with value 4-75 1`] = `
<wpp-slider class="wpp-slider" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list">
  <mock:shadow-root>
    <div class="slider-container">
      <div class="slider-column">
        <div class="range-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="min-range-idle slider" max="100" min="1" part="input-slider-min" step="1" type="range" value="4" style="--active-range-from-progress-bar: 3.0303030303030303%; --active-range-to-progress-bar: 74.74747474747475%;">
          <input class="max-range-idle slider" max="100" min="1" part="input-slider-max" step="1" type="range" value="75">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;

exports[`wpp-slider should render slider component 1`] = `
<wpp-slider class="wpp-slider" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list" value="1">
  <mock:shadow-root>
    <div class="slider-container">
      <div class="slider-column">
        <div class="single-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="max-range-idle slider" max="100" min="1" part="input-slider-max" step="1" type="range" value="1" style="--active-single-progress-bar: 0%;">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;

exports[`wpp-slider should render slider with generated marks 1`] = `
<wpp-slider class="wpp-slider" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list" marks="" max="7" value="5">
  <mock:shadow-root>
    <div class="slider-container">
      <div class="slider-column">
        <div class="single-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="max-range-idle slider" max="7" min="1" part="input-slider-max" step="1" type="range" value="5" style="--active-single-progress-bar: 66.66666666666666%;">
        </div>
        <div class="marks-list size-m" part="marks-list">
          <div class="active first mark-item" part="mark" style="--mark-left-dynamic: calc(0% - var(--slider-mark-size) / 2);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-1" part="label" type="xs-body">
                1
              </wpp-typography>
            </div>
          </div>
          <div class="active mark-item" part="mark" style="--mark-left-dynamic: calc(16.666666666666664% - var(--slider-mark-size) / 2 + 4px);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-2" part="label" type="xs-body">
                2
              </wpp-typography>
            </div>
          </div>
          <div class="active mark-item" part="mark" style="--mark-left-dynamic: calc(33.33333333333333% - var(--slider-mark-size) / 2 + 2px);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-3" part="label" type="xs-body">
                3
              </wpp-typography>
            </div>
          </div>
          <div class="active mark-item" part="mark" style="--mark-left-dynamic: calc(50% - var(--slider-mark-size) / 2 + 0px);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-4" part="label" type="xs-body">
                4
              </wpp-typography>
            </div>
          </div>
          <div class="active mark-item" part="mark" style="--mark-left-dynamic: calc(66.66666666666666% - var(--slider-mark-size) / 2 + -2px);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-5" part="label" type="xs-body">
                5
              </wpp-typography>
            </div>
          </div>
          <div class="mark-item" part="mark" style="--mark-left-dynamic: calc(83.33333333333333% - var(--slider-mark-size) / 2 + -4px);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-6" part="label" type="xs-body">
                6
              </wpp-typography>
            </div>
          </div>
          <div class="last mark-item" part="mark" style="--mark-left-dynamic: calc(100% - var(--slider-mark-size) / 2);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-7" part="label" type="xs-body">
                7
              </wpp-typography>
            </div>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;

exports[`wpp-slider should render slider with marks 1`] = `
<wpp-slider class="wpp-slider" exportparts="label, input-number, input-wrapper, input-min, divider, input-max, control-wrapper, editable-input-wrapper, value, value-wrapper, value-divider, mark, mark-circle, mark-inner, slider, input-slider-min, input-slider-max, marks-list" value="2">
  <mock:shadow-root>
    <div class="slider-container">
      <div class="slider-column">
        <div class="single-slider-wrapper" part="slider">
          <div class="slider-clickable-wrapper"></div>
          <input class="max-range-idle slider" max="3" min="1" part="input-slider-max" step="1" type="range" value="2" style="--active-single-progress-bar: 50%;">
        </div>
        <div class="marks-list size-m" part="marks-list">
          <div class="active first mark-item" part="mark" style="--mark-left-dynamic: calc(0% - var(--slider-mark-size) / 2);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-1" part="label" type="xs-body">
                low
              </wpp-typography>
            </div>
          </div>
          <div class="active mark-item" part="mark" style="--mark-left-dynamic: calc(50% - var(--slider-mark-size) / 2 + 0px);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-2" part="label" type="xs-body">
                medium
              </wpp-typography>
            </div>
          </div>
          <div class="last mark-item" part="mark" style="--mark-left-dynamic: calc(100% - var(--slider-mark-size) / 2);">
            <div class="circle" part="mark-circle">
              <div class="mark" part="mark-inner"></div>
            </div>
            <div class="label-container">
              <wpp-typography class="label size-m" id="mark-label-3" part="label" type="xs-body">
                rare
              </wpp-typography>
            </div>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-slider>
`;
